Refactorize all project

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.example.jigsaw.TileView
+    <com.example.jigsaw.widgets.TileView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.example.jigsaw.JigsawView
+    <com.example.jigsaw.widgets.JigsawView
         android:id="@+id/jigsawView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
