Add image to canvas

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.example.jigsaw.widgets.TileView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <com.example.jigsaw.widgets.JigsawView
         android:id="@+id/jigsawView"
         android:layout_width="wrap_content"
@@ -23,5 +15,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+     <com.example.jigsaw.widgets.TileView
+         android:id="@+id/tile"
+         android:layout_marginTop="50dp"
+         android:layout_marginStart="50dp"
+         app:layout_constraintTop_toTopOf="parent"
+         app:layout_constraintStart_toStartOf="parent"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
