Remove SpreadView and use another GridView

--- a/app/src/main/res/layout/layout_jigsaw.xml
+++ b/app/src/main/res/layout/layout_jigsaw.xml
@@ -14,23 +14,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.example.jigsaw.widgets.SpreadView
+    <com.example.jigsaw.widgets.GridView
         android:id="@+id/spreadView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="#ff00ff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/gridView"
         app:layout_constraintTop_toTopOf="parent" />
-
-<!--    <com.example.jigsaw.widgets.TileView-->
-<!--        android:id="@+id/tile"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="50dp"-->
-<!--        android:layout_marginTop="50dp"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
