--- a/app/src/main/res/layout/layout_jigsaw.xml
+++ b/app/src/main/res/layout/layout_jigsaw.xml
@@ -12,6 +12,7 @@
         android:clipChildren="false"
         android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/spreadView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
