Add custom attr border

--- a/jigsaw/src/main/res/values/attrs.xml
+++ b/jigsaw/src/main/res/values/attrs.xml
@@ -2,5 +2,6 @@
 <resources>
     <declare-styleable name="JigsawView">
         <attr name="jv_pieces" format="integer" />
+        <attr name="jv_borderBoard" format="reference" />
     </declare-styleable>
 </resources>
