--- a/jigsaw/src/main/res/values/attrs.xml
+++ b/jigsaw/src/main/res/values/attrs.xml
@@ -3,7 +3,7 @@
     <declare-styleable name="JigsawView">
         <attr name="jv_borderBoard" format="reference" />
         <attr name="jv_pieces" format="integer" />
-        <attr name="jv_spreadBorderCols" format="integer" />
+        <attr name="jv_spreadBoardCols" format="integer" />
         <attr name="jv_tileBorderWidth" format="dimension" />
         <attr name="jv_tileBorderColor" format="color" />
     </declare-styleable>
