Add tileSize as public variable

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         app:jv_spreadBoardCols="3"
         app:jv_tileBorderColor="#ff0000"
         app:jv_tileBorderWidth="4dp"
+        app:jv_tileSize="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
